fix catalog not showing in mobile

--- a/pages_components/Products/Catalog/Catalog.module.scss
+++ b/pages_components/Products/Catalog/Catalog.module.scss
@@ -4,7 +4,7 @@
 .catalog {
     max-width: 600px;
     margin: 0 auto;
-    padding: 40px 25px;
+    padding: 80px 25px;
 
     @include mdq(lg) {
         display: flex;
